# tig-code

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  curie_weiss_equivalence.py  curie_weiss_experiments_inaccessible_game.ipynb  generic_decomposition_n3.py  harmonic_oscillator.py  mass-spring-simulation-example.ipynb  pyproject.toml  setup.py  simulation_experiments_inaccessible_game.ipynb
.github/workflows/: publish.yml  test-notebooks.yml  tests.yml
examples/: curie_weiss_experiments_inaccessible_game.ipynb  generate_all_paper_figures.ipynb  mass-spring-simulation-example.ipynb  simulation_experiments_inaccessible_game.ipynb
tests/: test_curie_weiss_equivalence.py  test_generic_decomposition_n3.py  test_harmonic_oscillator.py  test_notebooks.py
tig/: __init__.py  curie_weiss_equivalence.py  harmonic_oscillator.py
