[tool.poetry]
name = "mepp"
version = "0.1.0"
description = "Maximum Entropy Production Principle (MEPP) quantum thermalization library with Steepest-Entropy-Ascent dynamics"
authors = ["Neil Lawrence <lawrennd@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lawrennd/the-inaccessible-game"
repository = "https://github.com/lawrennd/the-inaccessible-game"
documentation = "https://github.com/lawrennd/the-inaccessible-game"
packages = [{include = "mepp.py"}, {include = "__init__.py"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
matplotlib = "^3.5.0"
scipy = "^1.8.0"
tqdm = "^4.60.0"
quimb = "^1.11.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipywidgets = "^8.0.0"
notebook = "^7.0.0"
jupyterlab = "^4.0.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-benchmark = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lawrennd/the-inaccessible-game/issues" 