[tool.poetry]
name = "tig"
version = "0.1.0"
description = "The Inaccessible Game: Information-theoretic foundations for thermodynamic-like dynamics"
authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/lawrennd/tig-code"
repository = "https://github.com/lawrennd/tig-code"
keywords = ["information-theory", "thermodynamics", "GENERIC", "entropy", "Fisher-information"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "tig"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
